--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.3
 Mako==1.3.3
 MarkupSafe==2.1.5
+mysql-connector-python==8.3.0
 SQLAlchemy==2.0.29
 typing_extensions==4.11.0
 Werkzeug==3.0.2
